--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
+body {
+    font-family: Open Sans;
 }
 
-/* Place your styles below */
+h1 {
+    text-align: center;
+}
+
+background-color: #2401034; 
